# lox

./: .golangci.yaml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  spec.md
ast/: ast.go  print.go
examples/: README.md  fibonacci.lox  game_of_life.lox  primes_less_than.lox
golox/: Makefile  README.md  dev.sh  main.go  main_test.go
interpreter/: builtins.go  environment.go  interpreter.go  objects.go
lexer/: lexer.go
lox/: doc.go  error.go  lox.go
loxfmt/: Makefile  README.md  format.go  main.go  main_test.go
loxlint/: README.md  main.go  main_test.go
loxls/: Makefile  README.md  dev.sh  main.go
parser/: parser.go
scanner/: scanner.go
tree-sitter-lox/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-lox/bindings/c/: tree-sitter-lox.pc.in
tree-sitter-lox/bindings/go/: binding.go  binding_test.go
tree-sitter-lox/bindings/node/: binding.cc  index.js
tree-sitter-lox/bindings/python/tests/: test_binding.py
tree-sitter-lox/bindings/python/tree_sitter_lox/: __init__.py  binding.c
tree-sitter-lox/bindings/rust/: build.rs  lib.rs
tree-sitter-lox/bindings/swift/TreeSitterLoxTests/: TreeSitterLoxTests.swift
tree-sitter-lox/queries/lox/: highlights.scm
tree-sitter-lox/src/: grammar.json  node-types.json  parser.c
tree-sitter-lox/test/corpus/: comments.txt  declarations.txt  expressions.txt  signatures.txt  statements.txt
tree-sitter-lox/test/highlight/: comments.lox  declarations.lox  expressions.lox  signatures.lox  statements.lox
(+760 files in other folders)
